config/envoy/tls/envoy-emery.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9943
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route # configure the localclus routes
            virtual_hosts:
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: localclus
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
      tls_context:
        common_tls_context:
          alpn_protocols: h2
          tls_certificates:
          - certificate_chain:
              filename: /home/amukher1/devel/go/src/github.com/amukherj/envoygrpc/config/certs/envoy.crt
            private_key:
              filename: /home/amukher1/devel/go/src/github.com/amukherj/envoygrpc/config/certs/envoy.key
  clusters:
  - name: localclus
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: localhost
        port_value: 50501
    - socket_address:
        address: localhost
        port_value: 50503
