config/envoy/tls/envoy-hdr-rtg.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route
            virtual_hosts:
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                redirect:
                  path_redirect: "/"
                  https_redirect: true
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9943
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route
            virtual_hosts:
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: x-ikat-service-id
                    exact_match: greeter
                route:
                  cluster: greeterclus
              - match:
                  prefix: "/"
                  headers:
                  - name: x-ikat-service-id
                    exact_match: text
                route:
                  cluster: textclus
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
      tls_context:
        common_tls_context:
          alpn_protocols: h2
          tls_certificates:
          - certificate_chain:
              filename: /home/amukher1/devel/go/src/github.com/amukherj/envoygrpc/config/certs/envoy.crt
            private_key:
              filename: /home/amukher1/devel/go/src/github.com/amukherj/envoygrpc/config/certs/envoy.key
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9912
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route # configure the localclus routes
            virtual_hosts:
            - name: vhemery
              domains:
              - "emery"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: emery
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
  clusters:
  - name: greeterclus
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 50501
    - socket_address:
        address: 127.0.0.1
        port_value: 50503
  - name: textclus
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 50505
    - socket_address:
        address: 127.0.0.1
        port_value: 50507
  - name: emery
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 192.168.87.5
        port_value: 9943
    tls_context:
      sni: localhost
