config/envoy/tls/envoy-sds.yaml
node:
  id: id_ezra
  cluster: ezra
  
static_resources:
  clusters:
  - name: localclus
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 50501
    - socket_address:
        address: 127.0.0.1
        port_value: 50503
  - name: emery
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 192.168.87.5
        port_value: 9943
    tls_context:
      sni: localhost
  - name: sds_server_uds
    connect_timeout: 0.25s
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - pipe: 
        path: /home/amukher1/devel/go/src/github.com/amukherj/envoygrpc/uds
  
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route
            virtual_hosts:
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                redirect:
                  path_redirect: "/"
                  https_redirect: true
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9943
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route
            virtual_hosts:
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: localclus
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
      tls_context:
        common_tls_context:
          alpn_protocols: h2
          tls_certificate_sds_secret_configs:
          - name: server_cert
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                  envoy_grpc:
                    cluster_name: sds_server_uds
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9912
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route # configure the localclus routes
            virtual_hosts:
            - name: vhemery
              domains:
              - "emery"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: emery
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
